[package]
name = "repro-sqlx-bug"
version = "0.1.0"
authors = ["George Kaplan <george@georgekaplan.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sqlx]
version = "0.3.4"
features = ["sqlite"]

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]
